--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Còm Dubai - Taiwan Taxi Service</title>
+    <title>Còm Anh - Dịch vụ taxi uy tín tại Đài Loan</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
@@ -19,7 +19,7 @@
                     alt="Taxi"
                     class="header-image"
                 />
-                <h1>Còm Taxi</h1>
+                <h1>Còm Anh</h1>
             </div>
             <p class="tagline">Dịch vụ taxi uy tín tại Đài Loan</p>
         </div>
@@ -39,8 +39,8 @@
                 <i class="fas fa-star"></i>
                 <h3>Cam Kết</h3>
                 <ul>
-                    <li>Tài xế người Việt</li>
-                    <li>An toàn - Đúng giờ</li>
+                    <li>An toàn</li>
+                    <li>Đúng giờ</li>
                     <li>Giá cả phải chăng</li>
                 </ul>
             </div>
