--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
     <div class="container">
+        <div class="hoa-dao"></div>
+    <div class="hoa-mai"></div>
         <div class="header">
             <div class="header-content">
                 <img 
