--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 <body>
     <div class="container">
+        <canvas id="canvas"></canvas>
         <div class="hoa-dao"></div>
-    <div class="hoa-mai"></div>
+        <div class="hoa-mai"></div>
         <div class="header">
             <div class="header-content">
                 <img 
@@ -72,5 +73,6 @@
     </div>
     <script src="config.js"></script>
     <script src="script.js"></script>
+    <script src="fireworks.js"></script>
 </body>
 </html>
