--- a/index.html
+++ b/index.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Còm Anh - Dịch vụ taxi uy tín tại Đài Loan</title>
+
+    <!-- Meta tags cho SEO và chia sẻ -->
+    <meta name="description" content="✅ Đưa đón sân bay ✅ Du lịch ✅ Thuê xe theo ngày 📞 Liên hệ ngay để được phục vụ tốt nhất!">
+    <meta name="keywords" content="taxi Đài Loan, đưa đón sân bay, du lịch Đài Loan, thuê xe Đài Loan">
+
+    <!-- OpenGraph tags cho Facebook và Zalo -->
+    <meta property="og:title" content="🚕 Còm Anh - Taxi Đài Loan">
+    <meta property="og:description" content="✅ Đưa đón sân bay ✅ Du lịch ✅ Thuê xe theo ngày 📞 Liên hệ ngay để được phục vụ tốt nhất!">
+    <meta property="og:image" content="./img/thumbnail.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://[your-domain]">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Còm Anh Taxi">
+
+    <!-- Line specific meta tags -->
+    <meta property="line:app_id" content="YOUR_LINE_APP_ID">
+    <meta property="line:image" content="./img/thumbnail.jpg">
+
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Còm Anh - Dịch vụ taxi uy tín tại Đài Loan">
+    <meta name="twitter:description" content="Dịch vụ taxi uy tín tại Đài Loan - Đưa đón sân bay, du lịch, thuê xe theo ngày với giá cả phải chăng">
+    <meta name="twitter:image" content="https://[your-domain]/img/thumbnail.jpg">
+
+    <!-- Các link CSS và favicon hiện tại -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
