--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <!-- OpenGraph tags cho Facebook và Zalo -->
     <meta property="og:title" content="🚕 Còm Anh - Taxi Đài Loan">
     <meta property="og:description" content="✅ Đưa đón sân bay ✅ Du lịch ✅ Thuê xe theo ngày 📞 Liên hệ ngay để được phục vụ tốt nhất!">
-    <meta property="og:image" content="./img/thumbnail.jpg">
+    <meta property="og:image" content="https://cofm34.github.io/taxi/img/thumb.png">
+    <meta property="og:image:secure_url" content="https://cofm34.github.io/taxi/img/thumb.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://[your-domain]">
+    <meta property="og:url" content="https://cofm34.github.io/taxi">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Còm Anh Taxi">
 
@@ -27,7 +29,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Còm Anh - Dịch vụ taxi uy tín tại Đài Loan">
     <meta name="twitter:description" content="Dịch vụ taxi uy tín tại Đài Loan - Đưa đón sân bay, du lịch, thuê xe theo ngày với giá cả phải chăng">
-    <meta name="twitter:image" content="https://[your-domain]/img/thumbnail.jpg">
+    <meta name="twitter:image" content="https://cofm34.github.io/taxi/img/thumb.png">
 
     <!-- Các link CSS và favicon hiện tại -->
     <link rel="stylesheet" href="style.css">
@@ -39,9 +41,8 @@
 </head>
 <body>
     <div class="container">
-        <canvas id="canvas"></canvas>
         <div class="hoa-dao"></div>
-        <div class="hoa-mai"></div>
+    <div class="hoa-mai"></div>
         <div class="header">
             <div class="header-content">
                 <img 
@@ -99,6 +100,5 @@
     </div>
     <script src="config.js"></script>
     <script src="script.js"></script>
-    <script src="fireworks.js"></script>
 </body>
 </html>
