--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="hoa-dao"></div>
+    <canvas id="canvas"></canvas>
+    <div class="hoa-dao"></div>
     <div class="hoa-mai"></div>
         <div class="header">
             <div class="header-content">
@@ -98,6 +99,8 @@
             </a>
         </div>
     </div>
+    <canvas id="fireworks"></canvas>
+    <script src="fireworks.js"></script>
     <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
