--- a/index.html
+++ b/index.html
@@ -45,15 +45,19 @@
     <div class="hoa-dao"></div>
     <div class="hoa-mai"></div>
         <div class="header">
-            <div class="header-content">
-                <img 
-                    src="./img/profile.jpg"
-                    alt="Taxi"
-                    class="header-image"
-                />
-                <h1>Còm Anh</h1>
+            <div class="header-box">
+                <div class="header-content">
+                    <img 
+                        src="./img/profile.jpg"
+                        alt="Taxi"
+                        class="header-image"
+                    />
+                    <h1>Còm Anh</h1>
+                </div>
             </div>
-            <p class="tagline">Dịch vụ taxi uy tín tại Đài Loan</p>
+            <div class="tagline-box">
+                <p class="tagline">Dịch vụ taxi uy tín tại Đài Loan</p>
+            </div>
         </div>
 
         <div class="service-info">
@@ -97,11 +101,17 @@
                 <i class="fas fa-phone"></i>
                 <span>Gọi Ngay</span>
             </a>
+
+            <a href="#" id="addToHomeScreen" class="social-btn add-to-home">
+                <i class="fas fa-mobile-alt"></i>
+                <span>Lưu Card Visit</span>
+            </a>
         </div>
     </div>
     <canvas id="fireworks"></canvas>
     <script src="fireworks.js"></script>
     <script src="config.js"></script>
     <script src="script.js"></script>
+    <script src="add-to-home.js"></script>
 </body>
 </html>
