--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
                 <i class="fas fa-mobile-alt"></i>
                 <span>Lưu Card Visit</span>
             </a>
+
+            <a href="#" id="shareButton" class="social-btn share">
+                <i class="fas fa-share-alt"></i>
+                <span>Chia Sẻ</span>
+            </a>
         </div>
     </div>
     <canvas id="fireworks"></canvas>
@@ -116,5 +121,6 @@
     <script src="config.js"></script>
     <script src="script.js"></script>
     <script src="add-to-home.js"></script>
+    <script src="share.js"></script>
 </body>
 </html>
