--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                 <span>Gọi Ngay</span>
             </a>
 
-            <a href="#" id="addToHomeScreen" class="social-btn add-to-home">
+            <!-- <a href="#" id="addToHomeScreen" class="social-btn add-to-home">
                 <i class="fas fa-mobile-alt"></i>
                 <span>Lưu Card Visit</span>
-            </a>
+            </a> -->
 
             <a href="#" id="shareButton" class="social-btn share">
                 <i class="fas fa-share-alt"></i>
